improving models waterfall

--- a/src/models_trainning/great_filter_training/great_filter_initial_training.ipynb
+++ b/src/models_trainning/great_filter_training/great_filter_initial_training.ipynb
@@ -34,7 +34,7 @@
     "slided_df_path = os.path.join(os.getenv(\"SLIDED_DFS_CSV_PATH\"), \"data_slided_V2.parquet\")\n",
     "target_column = \"target_class_in_24h\"\n",
     "\n",
-    "df_model_input = util.create_df_model_input(slided_df_path, target_column, \"xl_\", '10min', 'last')"
+    "df_model_input = util.create_df_model_input_opt(slided_df_path, target_column, \"xl_\", '10min', 'last')"
    ],
    "id": "5dd5297b03c6ff10",
    "outputs": [],
@@ -68,7 +68,7 @@
     "val_pct = (1-train_pct)/2\n",
     "test_pct = (1-train_pct)/2\n",
     "\n",
-    "great_filter_data = util.prepare_data(great_filter_training_pool, target_column, lambda lb: 1 if lb >= 4 else 0, train_pct, val_pct)"
+    "great_filter_data = util.prepare_data(great_filter_training_pool, target_column, lambda lb: 1 if lb >= 3 else 0, train_pct, val_pct)"
    ],
    "id": "7b176e4b83ca80d3",
    "outputs": [],
@@ -79,6 +79,22 @@
    "cell_type": "markdown",
    "source": "### Training and Parameter Tuning",
    "id": "cbe55c11ebd8ee8e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "counts = great_filter_data['y']['train'].value_counts()\n",
+    "scale_pos_weight = counts[0] / counts[1]\n",
+    "\n",
+    "print(\"\\nDistribuição do Alvo M2 (no treino):\")\n",
+    "print(f\"Classe 0 (AB): {counts[0]} amostras\")\n",
+    "print(f\"Classe 1 (CMX):  {counts[1]} amostras\")\n",
+    "print(f\"Scale_pos_weight para M2: {scale_pos_weight:.2f}\")"
+   ],
+   "id": "c9aedd1e833b788c",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -95,7 +111,7 @@
     "\n",
     "        'device': 'cuda',\n",
     "\n",
-    "        'scale_pos_weight': trial.suggest_float(\"scale_pos_weight\", 10.0, 400.0, log=True),\n",
+    "        'scale_pos_weight': trial.suggest_float(\"scale_pos_weight\", 0.3, 3.0, log=True),\n",
     "\n",
     "        'max_depth': trial.suggest_int('max_depth', 3, 10),\n",
     "        'learning_rate': trial.suggest_float('learning_rate', 0.01, 0.3, log=True),\n",
@@ -116,7 +132,15 @@
     "\n",
     "    y_pred_val = model_.predict(great_filter_data['x']['val'])\n",
     "\n",
-    "    score = f1_score(great_filter_data['y']['val'], y_pred_val, average='macro')\n",
+    "\n",
+    "    # score = f1_score(great_filter_data['y']['val'], y_pred_val, average='macro')\n",
+    "\n",
+    "\n",
+    "    recall_cmx = recall_score(great_filter_data['y']['val'], y_pred_val, pos_label=1)\n",
+    "    recall_ab = recall_score(great_filter_data['y']['val'], y_pred_val, pos_label=0)\n",
+    "    w_ab = 6.0\n",
+    "    w_cmx = 1.0\n",
+    "    score = (w_ab * recall_ab) + (w_cmx * recall_cmx)\n",
     "\n",
     "    return score"
    ],
@@ -133,7 +157,7 @@
     "study.optimize(objective, n_trials=100)\n",
     "\n",
     "print(\"\\nBusca concluída!\")\n",
-    "print(f\"Melhor valor (macro f1-score): {study.best_value:.4f}\")\n",
+    "print(f\"Melhor valor: {study.best_value:.4f}\")\n",
     "print(\"Melhores parâmetros encontrados:\")\n",
     "print(study.best_params)"
    ],
@@ -192,11 +216,11 @@
     "great_filter_y_pred = great_filter_model.predict(great_filter_data['x']['test'])\n",
     "\n",
     "print(\"--- Relatório de Classificação (Conjunto de Teste) ---\\n\")\n",
-    "print(classification_report(great_filter_data['y']['test'], great_filter_y_pred, target_names=['ABC (0)', 'XM (1)']))\n",
+    "print(classification_report(great_filter_data['y']['test'], great_filter_y_pred, target_names=['AB (0)', 'CMX (1)']))\n",
     "\n",
     "print(\"\\n--- Matriz de Confusão ---\")\n",
     "cm = confusion_matrix(great_filter_data['y']['test'], great_filter_y_pred)\n",
-    "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=['ABC (0)', 'XM (1)'])\n",
+    "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=['AB (0)', 'CMX (1)'])\n",
     "disp.plot(cmap='Blues')\n",
     "plt.show()"
    ],
@@ -258,11 +282,11 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# model_save_path = r'../models/great_filter_model_v1.joblib'\n",
-    "# joblib.dump(great_filter_model, model_save_path)\n",
-    "# print(f\"Modelo salvo em {model_save_path}\")"
+    "model_save_path = r'../../models/great_filter/great_filter_model_v8.joblib'\n",
+    "joblib.dump(great_filter_model, model_save_path)\n",
+    "print(f\"Modelo salvo em {model_save_path}\")"
    ],
-   "id": "7175849d9c2cfedb",
+   "id": "513c8b71c6e6a25f",
    "outputs": [],
    "execution_count": null
   }
