implementing OOP structure to models

--- a/src/notebooks/data_manipulation/events.ipynb
+++ b/src/notebooks/data_manipulation/events.ipynb
@@ -14,7 +14,7 @@
     "import os\n",
     "import re\n",
     "from typing import Sequence\n",
-    "from src import util\n",
+    "from src.py_src import util\n",
     "\n",
     "from dotenv import load_dotenv\n",
     "\n",
@@ -381,7 +381,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "util.create_dirs(csv_path,events_range)",
+   "source": "util.create_dirs(csv_path, events_range)",
    "id": "9957e2e91f035ac0",
    "outputs": [],
    "execution_count": null
