--- a/src/notebooks/data_manipulation/xrays_data.ipynb
+++ b/src/notebooks/data_manipulation/xrays_data.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import re\n",
-    "from src import util\n",
+    "from src.py_src import util\n",
     "import xarray as xr"
    ],
    "outputs": [],
