--- a/src/notebooks/data_scrape/xrays_scrape.ipynb
+++ b/src/notebooks/data_scrape/xrays_scrape.ipynb
@@ -25,7 +25,7 @@
     "from selenium.webdriver.firefox.options import Options\n",
     "from webdriver_manager.firefox import GeckoDriverManager\n",
     "import time\n",
-    "import src.util as util"
+    "import src.py_src.util as util"
    ],
    "id": "initial_id",
    "outputs": [],
