--- a/src/notebooks/models_training/gatekeeper_training/gatekeeper_training.ipynb
+++ b/src/notebooks/models_training/gatekeeper_training/gatekeeper_training.ipynb
@@ -12,12 +12,12 @@
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "from src import util\n",
+    "from src.py_src import util\n",
     "\n",
     "import xgboost as xgb\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay, f1_score, recall_score\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, ConfusionMatrixDisplay, recall_score\n",
     "import optuna\n",
     "import joblib"
    ],
