--- a/src/notebooks/data_manipulation/slided_dfs.ipynb
+++ b/src/notebooks/data_manipulation/slided_dfs.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "from src import util\n",
+    "from src.py_src import util\n",
     "from tqdm import tqdm"
    ],
    "id": "initial_id",
