--- a/src/notebooks/data_scrape/xrays_nc_scrape.ipynb
+++ b/src/notebooks/data_scrape/xrays_nc_scrape.ipynb
@@ -20,7 +20,7 @@
     "import os\n",
     "import re\n",
     "\n",
-    "import src.util as util\n",
+    "import src.py_src.util as util\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from selenium import webdriver\n",
@@ -405,7 +405,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "util.create_dirs(save_path,nc_range)",
+   "source": "util.create_dirs(save_path, nc_range)",
    "id": "27912e3f164907c5"
   },
   {
